# gauss-core

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  napi-publish.yml  publish.yml  python-publish.yml  release.yml  wasm-publish.yml
crates/gauss-cli/: Cargo.toml
crates/gauss-cli/src/: config.rs  init.rs  main.rs
crates/gauss-core/: Cargo.toml
crates/gauss-core/benches/: core_benchmarks.rs
crates/gauss-core/src/: a2a.rs  a2a_client.rs  a2a_server.rs  agent.rs  agents_md.rs  code_execution.rs  config.rs  context.rs  cost.rs  error.rs  eval.rs  graph.rs  guardrail.rs  hitl.rs  lib.rs  mcp.rs  memory.rs  message.rs  middleware.rs  network.rs  patterns.rs  plugin.rs  rag.rs  resilience.rs  skill_md.rs  stream_transform.rs  streaming.rs  team.rs  telemetry.rs  tool.rs  workflow.rs
crates/gauss-core/src/provider/: anthropic.rs  deepseek.rs  fireworks.rs  google.rs  groq.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  openrouter.rs  perplexity.rs  retry.rs  together.rs  xai.rs
crates/gauss-core/tests/: agent_tests.rs  anthropic_tests.rs  config_tests.rs  context_tests.rs  core_tests.rs  eval_tests.rs  google_tests.rs  guardrail_tests.rs  hitl_tests.rs  mcp_tests.rs  memory_tests.rs  middleware_tests.rs  network_tests.rs  new_provider_tests.rs  patterns_tests.rs  plugin_tests.rs  proptest_tests.rs  provider_tests.rs  rag_tests.rs  resilience_tests.rs  retry_tests.rs  stream_transform_tests.rs  team_tests.rs  telemetry_tests.rs  workflow_tests.rs
crates/gauss-napi/: Cargo.toml  index.d.ts  index.js  package.json
crates/gauss-napi/src/: agent.rs  code_exec.rs  config.rs  eval.rs  hitl.rs  lib.rs  mcp.rs  memory.rs  middleware.rs  network.rs  orchestration.rs  plugin.rs  provider.rs  registry.rs  types.rs
crates/gauss-python/: Cargo.toml
crates/gauss-python/src/: agent.rs  code_exec.rs  config.rs  eval.rs  hitl.rs  lib.rs  mcp.rs  memory.rs  middleware.rs  network.rs  orchestration.rs  plugin.rs  provider.rs  registry.rs  types.rs
crates/gauss-wasm/: Cargo.toml
crates/gauss-wasm/src/: lib.rs
