[workspace]
resolver = "2"
members = [
    "crates/gauss-core",
    "crates/gauss-napi",
    "crates/gauss-wasm",
    "crates/gauss-python",
    "crates/gauss-cli",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
authors = ["Giulio Leone"]
license = "MIT"
repository = "https://github.com/giulio-leone/gauss-core"

[workspace.dependencies]
gauss-core = { path = "crates/gauss-core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
jsonschema = { version = "0.30", default-features = false }
async-stream = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
