[package]
name = "gauss-cli"
description = "Gauss CLI — AI agent runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "gauss"
path = "src/main.rs"

[dependencies]
gauss-core = { workspace = true, features = ["native"] }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"
tracing-subscriber = { workspace = true }
