[package]
name = "gauss-core"
description = "Gauss Core — High-performance AI agent engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
jsonschema = { workspace = true }
bytes = "1"
pin-project-lite = "0.2"
tokio-stream = "0.1"
eventsource-stream = "0.2"
secrecy = { version = "0.10", features = ["serde"] }
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = "0.6"
pretty_assertions = "1"
