[package]
name = "gauss-core"
description = "High-performance AI agent engine in Rust — multi-provider, tool-use, streaming, structured output, WASM-ready"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ai", "agent", "llm", "openai", "wasm"]
categories = ["api-bindings", "asynchronous", "wasm"]
readme = "../../README.md"

[features]
default = ["native"]
native = ["dep:tokio", "dep:tokio-stream"]
wasm = ["dep:gloo-timers"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
reqwest = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
jsonschema = { workspace = true }
async-stream = { workspace = true }
bytes = "1"
pin-project-lite = "0.2"
tokio-stream = { version = "0.1", optional = true }
eventsource-stream = "0.2"
secrecy = { version = "0.10", features = ["serde"] }
url = "2"
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = "0.6"
pretty_assertions = "1"
