[package]
name = "gauss-napi"
description = "Gauss Core NAPI bindings for Node.js"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
gauss-core = { workspace = true }
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"
serde_json = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
napi-build = "2"
