[package]
name = "gauss-python"
description = "Gauss Core Python bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "gauss_py"
crate-type = ["cdylib"]

[dependencies]
gauss-core = { workspace = true, features = ["native"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
serde_json = { workspace = true }
tokio = { workspace = true }
